Bug 25254 - computeContainerBoundingBox ignores viewport translations
Summary: computeContainerBoundingBox ignores viewport translations
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 20769
  Show dependency treegraph
 
Reported: 2009-04-16 17:24 PDT by Eric Seidel (no email)
Modified: 2009-04-16 17:35 PDT (History)
1 user (show)

See Also:


Attachments
Fix computeContainerBoundingBox to respect viewport translations (21.53 KB, patch)
2009-04-16 17:28 PDT, Eric Seidel (no email)
simon.fraser: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2009-04-16 17:24:44 PDT
computeContainerBoundingBox ignores viewport translations

Thus our dumped render tree information is wrong.  And *worse yet* our invalidation would be wrong too when we switch to using my soon-to-be-added, simpler clippedOverflowRectForRepaint functions.
Comment 1 Eric Seidel (no email) 2009-04-16 17:28:21 PDT
Created attachment 29564 [details]
Fix computeContainerBoundingBox to respect viewport translations

 18 files changed, 79 insertions(+), 51 deletions(-)
Comment 2 Eric Seidel (no email) 2009-04-16 17:35:08 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ...
	M	LayoutTests/ChangeLog
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/coords-viewattr-03-b-expected.txt
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-color-01-b-expected.txt
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-comptran-01-b-expected.txt
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-example-01-b-expected.txt
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-group-02-b-expected.txt
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-02-b-expected.txt
	M	LayoutTests/platform/mac/svg/W3C-SVG-1.1/types-basicDOM-01-b-expected.txt
	M	LayoutTests/platform/mac/svg/carto.net/textbox-expected.txt
	M	LayoutTests/platform/mac/svg/custom/feComponentTransfer-Discrete-expected.txt
	M	LayoutTests/platform/mac/svg/custom/feComponentTransfer-Gamma-expected.txt
	M	LayoutTests/platform/mac/svg/custom/feComponentTransfer-Linear-expected.txt
	M	LayoutTests/platform/mac/svg/custom/feComponentTransfer-Table-expected.txt
	M	LayoutTests/platform/mac/svg/custom/image-clipped-hit-expected.txt
	M	WebCore/ChangeLog
	M	WebCore/rendering/RenderSVGContainer.h
	M	WebCore/rendering/RenderSVGViewportContainer.h
	M	WebCore/rendering/SVGRenderSupport.cpp
Committed r42599