WebCore/rendering/RenderSVGContainer.h
@@ -60,10 +60,6 @@ public:
     virtual FloatRect objectBoundingBox() const;
     virtual FloatRect repaintRectInLocalCoordinates() const;
 
-    // FIXME: This only exists to allow computeContainerBoundingBox's broken transformation
-    // Once localToParentTransform() is landed, this will be removed, and layout test results updated.
-    virtual TransformationMatrix viewportTransform() const { return TransformationMatrix(); }
-
     virtual bool nodeAtPoint(const HitTestRequest&, HitTestResult&, int x, int y, int tx, int ty, HitTestAction);
 
 protected:
